--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
     <body class="page">
         <div class="home">
             {% include header.html %}
-            <div class="box">
+            <div class="home-page">
                 {{content}}
             </div>
         </div>
